# lsystem

./: Makefile  README  Setup.hs  lsystem.cabal  stack.yaml  uuagc_options
db/: db.sl
src/: GenSequences.hs  Main.hs  Main2.hs  ParserLS.hs  Process.hs  SistemaL.ag  SistemaL.hs
