name:               lsystem
version:            1.3
category:           Application
synopsis:           Paint an L-System Grammar
description:        Paint an L-System Grammar
license:            BSD3
license-file:       LICENSE
author:             Carlos Gomez
maintainer:         carliros.g@gmail.com
build-type:         Custom
cabal-version:      1.12
extra-source-files: 
  README
  src/SistemaL.ag

executable lsystem
  hs-source-dirs:     src
  main-is:            Main2.hs
  default-language:   Haskell2010
  other-modules:      SistemaL
  build-depends:      base >= 4.7 && < 5,
                      uuagc,
                      uuagc-cabal,
                      uu-parsinglib
